# Academia

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre_commit_config.yaml  CODE_OF_CONDUCT.md  README.md  pull_request_template.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/helper/: install.sh  site_config.json
.github/workflows/: ci.yml  linters.yml
academia/: hooks.py  modules.txt
academia/academia/: api.py
academia/academia/report/: pirnt style.json
academia/fixtures/: academic_status.json  calendar_procedure.json  custom_docperm.json  custom_field.json  journal_type.json  letter_head.json  lms_wiki_space.json  print_format.json  role.json  topic_decision_template.json  wiki_page.json  wiki_space.json  workflow.json  workflow_action_master.json  workflow_state.json
academia/hr_sanu/custom/: department.json  employee.json  employee_internal_work_history.json
academia/lms_api/: auth.py  login.py
academia/lms_api/student/: assignment.py  course.py  courseContent.py  grade.py
academia/lms_api/teacher/: assessment.py  assignment.py  course.py  courseContent.py  quiz.py
academia/setup/: install.py
academia/templates/: cancelled_compensatory_lesson.html  detailed_report.html  summary_report.html  vertical_path.html
academia/tests/: test_utils.py
academia/transaction_management/: server_scripts.py
academia/translations/: ar.csv
lms_frontend/: README.md  package-lock.json  package.json  vue.config.js
lms_frontend/src/: App.vue  main.js
(+1114 files in other folders)
