[project]
name = "academia"
authors = [
    { name = "SanU", email = "a.alshalabi@su.edu.ye"}
]
description = "Academic institution management system"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Specify minimum and maximum version requirements for Frappe, ERPNext, and HRMS to ensure compatibility and stability
[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"
erpnext = ">=16.0.0-dev,<17.0.0"
hrms = ">=16.0.0-dev,<17.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
